// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`--show-config > should show config > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.config.ts

[log] {
  "cache": true,
  "parallel": false,
  "logLevel": "log",
  "cleanCache": false,
  "showConfig": true,
  "showSummary": false,
  "excludedTasks": [],
  "isWorkerThread": false,
  "maxWorkers": 1,
  "list": false,
  "dryRun": false,
  "stacktrace": false,
  "cacheDir": "/ROOT/test/__fixtures__/main/.nadle",
  "projectDir": "/ROOT/test/__fixtures__/main",
  "minWorkers": 1,
  "configPath": "/ROOT/test/__fixtures__/main/nadle.config.ts"
}
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>0</BoldDim> task executed
`;

exports[`--show-config > should show config with extra options > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] Using Nadle from /ROOT/lib/index.js
[log] Loaded configuration from /ROOT/test/__fixtures__/main/nadle.config.ts

[log] {
  "cache": true,
  "parallel": false,
  "logLevel": "log",
  "cleanCache": false,
  "showConfig": true,
  "showSummary": false,
  "excludedTasks": [],
  "isWorkerThread": false,
  "minWorkers": 2,
  "maxWorkers": 3,
  "list": false,
  "dryRun": false,
  "stacktrace": false,
  "cacheDir": "/ROOT/test/__fixtures__/main/.nadle",
  "projectDir": "/ROOT/test/__fixtures__/main",
  "configPath": "/ROOT/test/__fixtures__/main/nadle.config.ts"
}
[log]
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim>
[log] <Bold>0</BoldDim> task executed
`;
